@@ -6,6 +6,10 @@ This file lists the incompatible changes between Version 2.x and older versions
     interval [a,b]; implement lfunconductor(L, list of potential N) instead
   - renamed GP functions Strchr -> strchr (pari_strchr in libpari),
     Strexpand -> strexpand, Strprintf -> strprintf, Strtex -> strtex
+  - qfbsolve now returns a t_VEC of t_VECs instead of a single t_VEC.
+
+* Specific to the PARI library:
+===============================
   - remove inferior hash function hash_str2: use hash_str
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
