@@ -1,0 +1,93 @@
+Qfb(1, 1, 1):1:[[1, 0]]
+Qfb(1, 1, 1):3:[[2, -1]]
+Qfb(1, 1, 1):7:[[-2, -1], [3, -1]]
+Qfb(1, 1, 1):13:[[-3, -1], [4, -1]]
+Qfb(1, 1, 1):19:[[-5, 2], [5, -3]]
+Qfb(1, 1, 1):21:[[5, -1], [-4, -1]]
+Qfb(1, 29, 271):1:[[1, 0]]
+Qfb(1, 29, 271):61:[[15, -1], [14, -1]]
+Qfb(1, 29, 271):63:[[16, -1], [13, -1]]
+Qfb(1, 29, 271):67:[[17, -1], [12, -1]]
+Qfb(1, 29, 271):73:[[18, -1], [11, -1]]
+Qfb(1, 29, 271):81:[[19, -1], [10, -1]]
+Qfb(1, 29, 271):91:[[9, -1], [20, -1]]
+Qfb(1, 29, 271):103:[[21, -1], [8, -1]]
+Qfb(1, 29, 271):117:[[22, -1], [7, -1]]
+Qfb(1, 29, 271):133:[[6, -1], [23, -1]]
+Qfb(1, 29, 271):151:[[24, -1], [5, -1]]
+Qfb(1, 29, 271):171:[[25, -1], [4, -1]]
+Qfb(1, 29, 271):193:[[26, -1], [3, -1]]
+Qfb(1, 29, 271):217:[[2, -1], [27, -1]]
+Qfb(1, 29, 271):243:[[28, -1], [29, -2], [1, -1]]
+Qfb(1, 29, 271):247:[[-31, 2], [27, -2]]
+Qfb(1, 29, 271):259:[[-33, 2], [25, -2]]
+Qfb(1, 29, 271):271:[[29, -1], [0, -1]]
+Qfb(1, 29, 271):279:[[-35, 2], [23, -2]]
+Qfb(2, 1, 3):2:[[1, 0]]
+Qfb(2, 1, 3):3:[[0, -1]]
+Qfb(2, 1, 3):4:[[1, -1]]
+Qfb(2, 1, 3):6:[[-1, -1]]
+Qfb(2, 1, 3):9:[[2, -1]]
+Qfb(2, 1, 3):12:[[-1, 2]]
+Qfb(2, 1, 3):13:[[-2, -1]]
+Qfb(2, 1, 3):16:[[-1, -2]]
+Qfb(2, 1, 3):18:[[3, -1]]
+Qfb(2, 1, 3):24:[[-3, -1], [-3, 2]]
+Qfb(2, 1, 3):26:[[-1, 3]]
+Qfb(2, 1, 3):29:[[2, -3]]
+Qfb(3, 4, 5):3:[[1, 0]]
+Qfb(3, 4, 5):4:[[1, -1]]
+Qfb(3, 4, 5):5:[[0, -1]]
+Qfb(3, 4, 5):9:[[2, -1]]
+Qfb(3, 4, 5):12:[[-1, -1]]
+Qfb(3, 4, 5):15:[[1, -2]]
+Qfb(3, 4, 5):20:[[3, -1]]
+Qfb(3, 4, 5):23:[[-3, 2]]
+Qfb(3, 4, 5):25:[[-2, -1]]
+Qfb(5, 1, -9, 0.E-38):-29:[[-401, -322], [1, 2]]
+Qfb(5, 1, -9, 0.E-38):-27:[[-99157, -79621], [-11547, -9272]]
+Qfb(5, 1, -9, 0.E-38):-25:[[56, 45], [-11, -9]]
+Qfb(5, 1, -9, 0.E-38):-15:[[178778, 143555], [-6, -5], [-61, -49], [3558, 28
+57]]
+Qfb(5, 1, -9, 0.E-38):-13:[[-2081, -1671], [264911, 212718]]
+Qfb(5, 1, -9, 0.E-38):-11:[[-5035, -4043], [92645, 74392]]
+Qfb(5, 1, -9, 0.E-38):-9:[[335, 269], [0, 1]]
+Qfb(5, 1, -9, 0.E-38):-5:[[604, 485], [-351044, -281881]]
+Qfb(5, 1, -9, 0.E-38):-3:[[1, 1], [-66, -53]]
+Qfb(5, 1, -9, 0.E-38):-1:[[-6512, -5229]]
+Qfb(5, 1, -9, 0.E-38):1:[[-5, -4]]
+Qfb(5, 1, -9, 0.E-38):3:[[-1477, -1186], [86133, 69163]]
+Qfb(5, 1, -9, 0.E-38):5:[[1, 0], [-269, -216]]
+Qfb(5, 1, -9, 0.E-38):9:[[-437177, -351044], [873, 701]]
+Qfb(5, 1, -9, 0.E-38):11:[[4, 3], [71, 57]]
+Qfb(5, 1, -9, 0.E-38):13:[[-2, -1], [-203, -163]]
+Qfb(5, 1, -9, 0.E-38):15:[[137, 110], [7989, 6415], [-79621, -63934], [-3, -
+2]]
+Qfb(5, 1, -9, 0.E-38):25:[[73109, 58705], [14501, 11644]]
+Qfb(5, 1, -9, 0.E-38):27:[[76, 61], [9, 7]]
+Qfb(5, 1, -9, 0.E-38):29:[[-523310, -420207], [2350, 1887]]
+Qfb(5, 16, 7, 0.E-38):-29:[[-6, 11]]
+Qfb(5, 16, 7, 0.E-38):-28:[[-5, 9], [125, -239], [4907, -9383], [7, -13]]
+Qfb(5, 16, 7, 0.E-38):-25:[[8, -15], [-4, 7]]
+Qfb(5, 16, 7, 0.E-38):-23:[[45, -86], [3, -2]]
+Qfb(5, 16, 7, 0.E-38):-20:[[-3, 5], [-1833, 3505], [-239, 457], [9, -17]]
+Qfb(5, 16, 7, 0.E-38):-13:[[-10, 19], [-2, 3]]
+Qfb(5, 16, 7, 0.E-38):-7:[[1685, -3222], [-91, 174]]
+Qfb(5, 16, 7, 0.E-38):-5:[[-34, 65], [-3222, 6161]]
+Qfb(5, 16, 7, 0.E-38):-4:[[1, -1], [11, -21]]
+Qfb(5, 16, 7, 0.E-38):-1:[[-148, 283]]
+Qfb(5, 16, 7, 0.E-38):1:[[-1, 2]]
+Qfb(5, 16, 7, 0.E-38):4:[[-57, 109], [-1537, 2939]]
+Qfb(5, 16, 7, 0.E-38):5:[[4759, -9100], [-23, 44]]
+Qfb(5, 16, 7, 0.E-38):7:[[12, -23], [0, -1]]
+Qfb(5, 16, 7, 0.E-38):13:[[-1389, 2656], [205, -392]]
+Qfb(5, 16, 7, 0.E-38):20:[[353, -675], [13, -25], [1, -3], [1241, -2373]]
+Qfb(5, 16, 7, 0.E-38):23:[[6296, -12039], [80, -153]]
+Qfb(5, 16, 7, 0.E-38):25:[[1093, -2090], [501, -958]]
+Qfb(5, 16, 7, 0.E-38):28:[[649, -1241], [1, 1], [-35, 67], [945, -1807]]
+Qfb(5, 16, 7, 0.E-38):29:[[797, -1524]]
+[[-16382350221535464479, 8479443857936402504], [18446744073709551616, -1], [
+-18446744073709551616, -1], [16382350221535464479, 8479443857936402504]]
+[[-16382350221535464479, 8479443857936402504], [18446744073709551616, -1], [
+-18446744073709551616, -1], [16382350221535464479, 8479443857936402504]]
+Total time spent: 1984
