@@ -1,3 +1,5 @@
+chk(q,V,n)=if(#Set(V)!=#V,return(0));for(i=1,#V,if(qfeval(q,V[i])!=n,return(0)));1;
+
 bqfb(N=10000)=
 {
   my(p,d,r,V,q,q2,Q,Q2);
@@ -7,9 +9,20 @@ bqfb(N=10000)=
       p=random(1000)-100;
       if(p<3,p=1,p=nextprime(p)));
     q=qfbprimeform(d,p); V=Vec(q); q2=Qfb(V[3],V[2],V[1]);
-    until(Q!=0||Q2!=0,r=nextprime(random(30000));
+    until(Q!=0||Q2!=0,r=random([-1000,30000]);
       Q=qfbsolve(q,r);Q2=qfbsolve(q2,r));
-    if(Q2==0||qfeval(q2,Q2)!=r,print("qfbsolve(",q2,",",r,")!=",Q2);break);
-    if(Q==0||qfeval(q,Q)!=r,print("qfbsolve(",q,",",r,")!=",Q);break));
+    if(Q2==0||!chk(q2,Q2,r),print("qfbsolve(",q2,",",r,")!=",Q2);break);
+    if(Q==0 ||!chk(q,Q,r),print("qfbsolve(",q,",",r,")!=",Q);break));
 }
 bqfb();
+test(qf,N)=
+  for(i=-N,N,my(Q=qfbsolve(qf,i));if(Q,print(qf,":",i,":",Q)));
+test(Qfb(1,1,1),30);
+test(Qfb(1,29,271),300);
+test(Qfb(2,1,3),30);
+test(Qfb(3,4,5),30);
+test(Qfb(5,1,-9),30);
+test(Qfb(5,16,7),30);
+N=2^128+1; F=[59649589127497217,1;5704689200685129054721,1];
+qfbsolve(Qfb(1,0,1),F)
+qfbsolve(Qfb(1,0,1),[N,F])
